@@ -5,16 +5,24 @@ buildscript {
 	}
 
 	dependencies {
-
-		classpath (group: 'com.sahlbach.gradle', name: 'gradle-jetty-eclipse-plugin', version: '1.9.+')
-		classpath "org.apache.derby:derby:10.9.1.0"
-		classpath group: "org.apache.tomcat", name: "dbcp", version: '6.0.39'
-		
+		classpath group: "com.github.kulya", name: "jmeter-gradle-plugin", version: "1.3.2-2.6"
+		classpath group: "com.sahlbach.gradle", name: "gradle-jetty-eclipse-plugin", version: "1.9.+"
+		classpath group: "org.apache.tomcat", name: "dbcp", version: "6.0.39"
+		classpath group: "org.apache.derby", name: "derby", version: "10.9.1.0"
 	}
 }
 
 apply plugin: 'war'
 apply plugin: 'jettyEclipse'
+apply plugin: 'jmeter'
+
+jmeterRun.configure {
+	jmeterTestFiles = [ file("test/webservice-test.jmx") ]
+	jmeterPropertyFile = file("test/jmeter.properties")
+	//maxHeapSize ="2048M"
+	//enableReports = false
+	//jmeterUserProperties  = [ "dummy -XX:MaxPermSize=512M" ]
+}
 
 dependencies {
 
@@ -44,8 +52,6 @@ dependencies {
 	
 }
 
-ant.properties['JETTY_JDBC_URL'] = "jdbc:derby:" + System.getProperty("java.io.tmpdir") + "/mangodemo-db;create=true;" 
-
 jettyEclipse { 
 	jettyConfig = file('test/jetty-env.xml') 
 	httpPort = 9090
@@ -66,4 +72,5 @@ task jettyEclipseRunDaemon() {
 }
 
 test.dependsOn(jettyEclipseRunDaemon)
+jmeterRun.dependsOn(jettyEclipseRunDaemon)
 jettyEclipseRunDaemon.dependsOn(war)
